Fix logic for handling propositions with a non-null delete date.